# battery-tray

./: README.md  pyproject.toml
src/battery_tray/: __init__.py  __main__.py  app.py  battery.py  config.py  render.py  window.py
tests/: test_battery.py  test_config.py  test_package_version.py  test_render.py
