[build-system]
requires = ["hatchling (>=1.29.0,<2.0.0)", "hatch-vcs (>=0.5.0,<1.0.0)"]
build-backend = "hatchling.build"

[project]
name = "battery-tray"
dynamic = ["version"]
description = "A system-tray battery monitor with a battery-selection window."
authors = [
    {name = "Jacob McIntosh", email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
keywords = ["battery", "tray", "monitor", "power", "tkinter", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "Pillow>=12.2.0",
    "sevaht-gui",
    "platformdirs>=4.10.0",
]

[project.scripts]
battery-tray = "battery_tray.__main__:main"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "twine (>=6.2.0,<7.0.0)",
    "vulture (>=2.14,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/sevaht/battery-tray"
Source = "https://github.com/sevaht/battery-tray"
Issues = "https://github.com/sevaht/battery-tray/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/battery_tray"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/LICENSE"]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
exclude = ["^docs/", "^dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["COM812", "COM819", "E203", "E501", "TD003"]
select = [
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM",
    "DTZ", "E", "EM", "ERA", "F", "FA", "FLY", "FURB", "I",
    "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PLR", "PLW", "PTH",
    "Q", "RET", "RSE", "RUF", "S", "SIM", "TC", "TCH", "TD",
    "TID", "TRY", "UP"
]

[tool.ruff.lint.per-file-ignores]
"checks" = ["S603"]
"tests/**/*" = ["PLR2004", "S101"]

[tool.vulture]
min_confidence = 70
